[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/images/rooms/mentor/MentorImage.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/UI/FontSmal.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Rooms/mentor/MoveButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Rooms/mentor/mentor.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/LoadOut/GoldSign.tscn" type="PackedScene" id=5]

[node name="Mentor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Container" type="Control" parent="."]
margin_right = 1084.0
margin_bottom = 1000.0
rect_min_size = Vector2( 0, 1000 )

[node name="TextureRect" type="TextureRect" parent="Container"]
margin_top = 4.0
margin_right = 1084.0
margin_bottom = 1004.0
rect_min_size = Vector2( 0, 1000 )
texture = ExtResource( 1 )
expand = true

[node name="GoldSign" parent="Container" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 400.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="."]
margin_top = 1004.0
margin_right = 1084.0
margin_bottom = 1177.0
rect_min_size = Vector2( 0, 173 )
custom_fonts/font = ExtResource( 2 )
text = "Who you want to buy?"
align = 1
valign = 1
autowrap = true

[node name="VBox" type="VBoxContainer" parent="."]
margin_top = 1181.0
margin_right = 1084.0
margin_bottom = 1708.0
rect_min_size = Vector2( 0, 520 )

[node name="Button" parent="VBox" instance=ExtResource( 3 )]
margin_right = 1084.0
rect_min_size = Vector2( 0, 173 )

[node name="Button2" parent="VBox" instance=ExtResource( 3 )]
margin_top = 177.0
margin_right = 1084.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 173 )

[node name="Button3" parent="VBox" instance=ExtResource( 3 )]
margin_top = 354.0
margin_right = 1084.0
margin_bottom = 527.0
rect_min_size = Vector2( 0, 173 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 1712.0
margin_right = 1084.0
margin_bottom = 1952.0

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_right = 540.0
margin_bottom = 240.0
rect_min_size = Vector2( 540, 240 )
custom_fonts/font = ExtResource( 2 )
text = "Loadout"

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 544.0
margin_right = 1084.0
margin_bottom = 240.0
rect_min_size = Vector2( 540, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[connection signal="bought" from="VBox/Button" to="." method="_on_Button_pressed"]
[connection signal="bought" from="VBox/Button2" to="." method="button_bought"]
[connection signal="bought" from="VBox/Button3" to="." method="button_bought"]
[connection signal="button_up" from="HBoxContainer/Button2" to="." method="_on_Button2_load_out"]
[connection signal="button_up" from="HBoxContainer/Button" to="." method="_on_Button_exit"]
